@@ -5,6 +5,7 @@
 #else
 #include <curl/curl.h>
 #endif
+#include <sstream>
 
 #include "../main/Logger.h"
 #include "../webserver/Base64.h"
@@ -56,11 +57,14 @@ bool SMTPClient::SendEmail(
 	slist1 = NULL;
 	slist1 = curl_slist_append(slist1, sTo.c_str());
 
-	std::string szURL="smtp://"+MailServer+"/domoticz";
+	std::stringstream sstr;
+
+	sstr << "smtp://" << MailServer << ":" << MailPort << "/domoticz";
+
+	std::string szURL=sstr.str();
 
 	curl = curl_easy_init();
 
-	curl_easy_setopt(curl, CURLOPT_INFILESIZE_LARGE, (curl_off_t)177);
 	curl_easy_setopt(curl, CURLOPT_URL, szURL.c_str());
 	curl_easy_setopt(curl, CURLOPT_UPLOAD, 1L);
 	if (MailUsername!="")
@@ -157,6 +161,9 @@ bool SMTPClient::SendEmail(
 	}
 	smtp_ctx.sDataLength=szMessage.size();
 	memcpy(smtp_ctx.pDataBytes,szMessage.c_str(),smtp_ctx.sDataLength);
+
+	curl_off_t blength=(curl_off_t)smtp_ctx.sDataLength;
+	curl_easy_setopt(curl, CURLOPT_INFILESIZE_LARGE, blength);
 
 	curl_easy_setopt(curl, CURLOPT_READFUNCTION, smtp_payload_reader);
 	curl_easy_setopt(curl, CURLOPT_READDATA, &smtp_ctx);
