@@ -25,6 +25,7 @@ Version 1.0.xxx (May xxth 2013)
 - Implemented: Option to enable/disable sending Emails in Notification Alerts
 - Fixed: Email now being send with UTF-8 encoding
 - Implemented: Razberry (Z-Wave) usage meter sensor
+- Changed: Email setup now includes Port number
 
 Version 1.0.484 (April 28th 2013)
 - Implemented: Raspberry Pi, updating via the web browser (Settings Tab)
